// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/WBar Should be render correctly 1`] = `
<g id="Bars">
  <g id="0">
    <defs>
      <clipPath id="path-0-barTest">
        <rect rx="5" ry="5" x="2" y="0" width="32" height="-3980" fill="tomato"></rect>
      </clipPath>
    </defs>
    <g id="line" style="clip-path: url(#path-0-barTest);">
      <WTrans-stub initialProps="[object Object]" transition="all 1s ease">
        <rect x="2" y="0" width="32" height="4000" fill="#e8e8e8" style="transition: all 1s ease;"></rect>
      </WTrans-stub>
    </g>
    <!---->
    <!---->
  </g>
  <g id="1">
    <defs>
      <clipPath id="path-1-barTest">
        <rect rx="5" ry="5" x="353" y="0" width="32" height="-2980" fill="tomato"></rect>
      </clipPath>
    </defs>
    <g id="line" style="clip-path: url(#path-1-barTest);">
      <WTrans-stub initialProps="[object Object]" transition="all 1s ease">
        <rect x="353" y="0" width="32" height="3000" fill="#e8e8e8" style="transition: all 1s ease;"></rect>
      </WTrans-stub>
    </g>
    <!---->
    <!---->
  </g>
  <g id="2">
    <defs>
      <clipPath id="path-2-barTest">
        <rect rx="5" ry="5" x="704" y="0" width="32" height="-9780" fill="tomato"></rect>
      </clipPath>
    </defs>
    <g id="line" style="clip-path: url(#path-2-barTest);">
      <WTrans-stub initialProps="[object Object]" transition="all 1s ease">
        <rect x="704" y="0" width="32" height="9800" fill="#e8e8e8" style="transition: all 1s ease;"></rect>
      </WTrans-stub>
    </g>
    <!---->
    <!---->
  </g>
</g>
`;

exports[`Components/WBar Should be render with label correctly 1`] = `
<g id="Bars">
  <g id="0">
    <defs>
      <clipPath id="path-0-barTest">
        <rect rx="5" ry="5" x="2" y="0" width="32" height="-3980" fill="tomato"></rect>
      </clipPath>
    </defs>
    <g id="line" style="clip-path: url(#path-0-barTest);">
      <WTrans-stub initialProps="[object Object]" transition="all 1s ease">
        <rect x="2" y="0" width="32" height="4000" fill="#e8e8e8" style="transition: all 1s ease;"></rect>
      </WTrans-stub>
    </g>
    <g id="label">
      <WTrans-stub initialProps="[object Object]" transition="all 0.5s 1s ease"><text x="18" y="0" text-anchor="middle" font-size="12" style="fill: #333333; cursor: default; transition: all 1s ease; transform: translateY(3994px);">
          4000
        </text></WTrans-stub>
    </g>
    <!---->
  </g>
  <g id="1">
    <defs>
      <clipPath id="path-1-barTest">
        <rect rx="5" ry="5" x="353" y="0" width="32" height="-2980" fill="tomato"></rect>
      </clipPath>
    </defs>
    <g id="line" style="clip-path: url(#path-1-barTest);">
      <WTrans-stub initialProps="[object Object]" transition="all 1s ease">
        <rect x="353" y="0" width="32" height="3000" fill="#e8e8e8" style="transition: all 1s ease;"></rect>
      </WTrans-stub>
    </g>
    <g id="label">
      <WTrans-stub initialProps="[object Object]" transition="all 0.5s 1s ease"><text x="369" y="0" text-anchor="middle" font-size="12" style="fill: #333333; cursor: default; transition: all 1s ease; transform: translateY(2994px);">
          3000
        </text></WTrans-stub>
    </g>
    <!---->
  </g>
  <g id="2">
    <defs>
      <clipPath id="path-2-barTest">
        <rect rx="5" ry="5" x="704" y="0" width="32" height="-9780" fill="tomato"></rect>
      </clipPath>
    </defs>
    <g id="line" style="clip-path: url(#path-2-barTest);">
      <WTrans-stub initialProps="[object Object]" transition="all 1s ease">
        <rect x="704" y="0" width="32" height="9800" fill="#e8e8e8" style="transition: all 1s ease;"></rect>
      </WTrans-stub>
    </g>
    <g id="label">
      <WTrans-stub initialProps="[object Object]" transition="all 0.5s 1s ease"><text x="720" y="0" text-anchor="middle" font-size="12" style="fill: #333333; cursor: default; transition: all 1s ease; transform: translateY(9794px);">
          9800
        </text></WTrans-stub>
    </g>
    <!---->
  </g>
</g>
`;

exports[`Components/WBar Should be render with stackedlabel correctly 1`] = `
<g id="Bars">
  <g id="0">
    <defs>
      <clipPath id="path-0-undefined">
        <rect rx="5" ry="5" x="34" y="0" width="32" height="-3980" fill="tomato"></rect>
      </clipPath>
    </defs>
    <g id="line" style="clip-path: url(#path-0-undefined);">
      <WTrans-stub initialProps="[object Object]" transition="all 1s ease">
        <rect x="34" y="0" width="32" height="4000" fill="#e8e8e8" style="transition: all 1s ease;"></rect>
      </WTrans-stub>
    </g>
    <!---->
    <g id="label">
      <WTrans-stub initialProps="[object Object]" transition="all 0.5s 1s ease"><text x="50" y="0" text-anchor="middle" font-size="12" style="fill: #333333; cursor: default; transition: all 1s ease; transform: translateY(3994px);">
          4000
        </text></WTrans-stub>
    </g>
  </g>
  <g id="1">
    <defs>
      <clipPath id="path-1-undefined">
        <rect rx="5" ry="5" x="385" y="0" width="32" height="-2980" fill="tomato"></rect>
      </clipPath>
    </defs>
    <g id="line" style="clip-path: url(#path-1-undefined);">
      <WTrans-stub initialProps="[object Object]" transition="all 1s ease">
        <rect x="385" y="0" width="32" height="3000" fill="#e8e8e8" style="transition: all 1s ease;"></rect>
      </WTrans-stub>
    </g>
    <!---->
    <g id="label">
      <WTrans-stub initialProps="[object Object]" transition="all 0.5s 1s ease"><text x="401" y="0" text-anchor="middle" font-size="12" style="fill: #333333; cursor: default; transition: all 1s ease; transform: translateY(2994px);">
          3000
        </text></WTrans-stub>
    </g>
  </g>
  <g id="2">
    <defs>
      <clipPath id="path-2-undefined">
        <rect rx="5" ry="5" x="736" y="0" width="32" height="-9780" fill="tomato"></rect>
      </clipPath>
    </defs>
    <g id="line" style="clip-path: url(#path-2-undefined);">
      <WTrans-stub initialProps="[object Object]" transition="all 1s ease">
        <rect x="736" y="0" width="32" height="9800" fill="#e8e8e8" style="transition: all 1s ease;"></rect>
      </WTrans-stub>
    </g>
    <!---->
    <g id="label">
      <WTrans-stub initialProps="[object Object]" transition="all 0.5s 1s ease"><text x="752" y="0" text-anchor="middle" font-size="12" style="fill: #333333; cursor: default; transition: all 1s ease; transform: translateY(9794px);">
          9800
        </text></WTrans-stub>
    </g>
  </g>
</g>
`;

exports[`Components/WBar Shouldn't be render 1`] = `undefined`;
